[package]
name = "key-set"
version = "0.1.0"
edition = "2018"

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
bincode = "1.3.3"
commit = { git = "ssh://git@github.com/EspressoSystems/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10.0"
snafu = { version = "0.6.10", features = ["backtraces"] }
