[package]
name = "key-set"
version = "0.2.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
bincode = "1.3.3"
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git" }
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.10.0"
snafu = { version = "0.7.0", features = ["backtraces"] }
